# visual-behavior-robotitos

./: CMakeLists.txt  README.md  package.xml
include/visual_behavior/: DetectBall.h  DetectBallDist.h  DetectObject.h  DetectPerson.h  DetectPersonDist.h  Foward.h  MakeSound.h  PID.h  Turn.h  clamp.h  std14.h  what_follow.h
launch/: visual_ball.launch  visual_complete.launch  visual_person.launch
src/: visual_ball_node.cpp  visual_complete_node.cpp  visual_person_node.cpp
src/visual_behavior/: DetectBall.cpp  DetectBallDist.cpp  DetectPerson.cpp  DetectPersonDist.cpp  Foward.cpp  MakeSound.cpp  PID.cpp  Turn.cpp  what_follow.cpp
visual_behavior_xml/: visual_ball.xml  visual_complete.xml  visual_person.xml  visual_person_mod.xml
