<?xml version="1.0"?>
<package format="2">
  <name>visual_behavior</name>
  <version>0.1.0</version>
  <description>The visual_behavior package</description>

  <maintainer email="o.acosta.2019@alumnos.urjc.es">ori1710</maintainer>
  <maintainer email="j.avilleira.2019@alumnos.urjc.es">javilleira2019</maintainer>
  <maintainer email="f.gomezl.2019@alumnos.urjc.es">p4golo</maintainer>
  <maintainer email="j.fernandezev.2018@alumnos.urjc.es">JuanFernandezEva</maintainer>
  
  <license>Apache 2</license>
  <url type="website">https://www.aulavirtual.urjc.es/moodle/course/view.php?id=144699</url>

  <author email="o.acosta.2019@alumnos.urjc.es">Oriana Acosta</author>
  <author email="j.avilleira.2019@alumnos.urjc.es">Jaime Avilleira</author>
  <author email="f.gomezl.2019@alumnos.urjc.es">Francisco Gómez</author>
  <author email="fj.fernandezev.2018@alumnos.urjc.es">Juan Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>libzmq3-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>kobuki_msgs</build_export_depend>
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
	<build_export_depend>image_transport</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>libzmq3-dev</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
	<exec_depend>image_transport</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>libzmq3-dev</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
